it works, next step will be docker compose

--- a/cmd/go-mongodb-crud-api-example/config.yaml
+++ b/cmd/go-mongodb-crud-api-example/config.yaml
@@ -3,4 +3,7 @@ server:
   prefix: ""
 dbuser:
   dbname: dbuser
-  connstr: "mongodb://localhost:27017"
+  # uncomment this for go run .
+  # connstr: "mongodb://localhost:27017"
+  # uncomment this for docker
+  connstr: "mongodb://mongodb-0:27017" 
