--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
   mongodb:
     image: mongo:5.0.6
     volumes:
-      - mongo-vol:/var/lib/docker/
+      - mongo-vol:/data/db
     ports:
       - "27017:27017"
     networks:
