--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,5 @@
 version: "3.9"
+
 services:
   go-mongodb-app:
     build: .
@@ -11,12 +12,15 @@ services:
   mongodb:
     image: mongo:5.0.6
     volumes:
-      - mongo-vol:/data/db
+      - "mongo-vol:/data/db"
+      - "mongo-vol:/data/configdb"
     ports:
       - "27017:27017"
     networks:
       - db_network
+
 volumes:
   mongo-vol:
+  mongo-config-vol:
 networks:
   db_network:  
